--- a/package.json
+++ b/package.json
@@ -3,10 +3,29 @@
   "version": "1.0.0",
   "description": "Node.js client sdk of diceDB",
   "type": "module",
-  "main": "src/index.ts",
-  "repository": "https://github.com/JaiminPatel345/dicedb-node.git",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JaiminPatel345/dicedb-node.git"
+  },
   "author": "Jaimin Detroja",
-  "keywords": ["dicedb" , "dicedb-node" ,  "node-dicedb" , "node dicedb"],
+  "keywords": [
+    "dicedb",
+    "dicedb-node",
+    "node-dicedb",
+    "node dicedb"
+  ],
   "license": "UNLICENSED",
   "scripts": {
     "build": "tsc",
@@ -30,12 +49,16 @@
     }
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.1",
+    "@semantic-release/npm": "^12.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.10",
     "jest": "^29.7.0",
+    "semantic-release": "^24.2.3",
+    "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2",
-    "ts-jest": "^29.2.6"
+    "typescript": "^5.8.2"
   }
-
 }
