--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "node-dicedb",
     "node dicedb"
   ],
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "tsc",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
