--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dicedb-node",
-  "version": "1.0.7",
+  "version": "1.0.1",
   "description": "Node.js client sdk of diceDB",
   "type": "module",
   "main": "dist/index.js",
@@ -17,7 +17,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JaiminPatel345/dicedb-node.git"
+    "url": "https://github.com/JaiminPatel345/dicedb-node.git"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "author": "Jaimin Detroja",
   "keywords": [
@@ -31,8 +34,7 @@
     "build": "tsc",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "prepublishOnly": "yarn build",
-    "preversion": "npm test",
-    "version": "yarn build "
+    "semantic-release": "semantic-release"
   },
   "jest": {
     "extensionsToTreatAsEsm": [
@@ -51,9 +53,14 @@
     }
   },
   "devDependencies": {
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/github": "^11.0.1",
+    "@semantic-release/npm": "^12.0.1",
+    "@semantic-release/release-notes-generator": "^14.0.3",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.10",
     "jest": "^29.7.0",
+    "semantic-release": "^24.2.3",
     "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
